tests/negative/issue1337/DoubleBraces.juvix
module DoubleBraces;

type Nat :=
  | O : Nat
  | S : Nat -> Nat;

fun (n : Nat) : Nat := case n of S {{y}} := O;
